--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node-js-sample",
   "version": "0.0.1",
   "description": "a sample node.js app for heroku",
-  "main": "web.js",
+  "main": "webtest.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
